--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ repositories {
 
 dependencies {
     compile 'com.google.guava:guava:22.0'
-
+    compile 'org.springframework:spring-context:4.3.12.RELEASE'
     compileOnly "org.projectlombok:lombok:1.16.16"
 
     testCompile 'org.hamcrest:hamcrest-all:1.3'
